# BooksProject

./: CMakeLists.txt  Carte.cpp  Carte.h  CartePoezie.cpp  CartePoezie.h  CarteProza.cpp  CarteProza.h  README.md  ReadFromFileException.h  Repo.cpp  Repo.h  RepoException.h  RepoFile.cpp  RepoFile.h  Service.cpp  Service.h  TestCarte.cpp  TestCarte.h  TestCartePoezie.cpp  TestCartePoezie.h  TestCarteProza.cpp  TestCarteProza.h  TestRepo.cpp  TestRepo.h  TestRepoFile.cpp  TestRepoFile.h  TestService.cpp  TestService.h  TestValidatorCarte.cpp  TestValidatorCarte.h  UI.cpp  UI.h  ValidationException.h  ValidatorCarte.cpp  ValidatorCarte.h  ValidatorCartePoezie.cpp  ValidatorCartePoezie.h  ValidatorCarteProza.cpp  ValidatorCarteProza.h  carti.txt  (+3 more)
